--- a/joint-continuous.Rmd
+++ b/joint-continuous.Rmd
@@ -3,6 +3,8 @@
 
 ## Theory {-}
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zlh3XXmKZLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ```{definition joint-continuous}
 The joint distribution of two continuous random variables $X$ and $Y$ 
   is described by their **joint p.d.f.** 
