--- a/sums-continuous.Rmd
+++ b/sums-continuous.Rmd
@@ -196,7 +196,7 @@ $\text{Exponential}(\lambda=0.8)$ interarrival times:
 In this example, we investigate the distribution of $S_r$.
 
 We start with the case $r=2$. Since $S_2$ is the sum of $T_1$ and $T_2$, two independent 
-exponential random variables, we can use \@ref(thm:sum-independent-continuous) to derive its p.d.f. 
+exponential random variables, we can use Theorem \@ref(thm:sum-independent-continuous) to derive its p.d.f. 
 
 We convolve the $\text{Exponential}(\lambda=0.8)$ p.d.f. with itself, since $T_1$ and $T_2$ 
   have the same distribution. Plugging the p.d.f.s into \@ref(eq:convolution-continuous), we obtain:
